--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
 </head>
 <body>
 	<div class="grid-container">
-		<div class="item1">
+		<div class="header">
 			 <h1>Header</h1>
 		</div>
 
-		<div class="item2">
+		<div class="menu">
 			<h1>Menu</h1>
 		</div>
 
-		<div class="item3">
+		<div class="main">
 			<h1>Content</h1>
 		</div>
 
-		<div class="item4">
+		<div class="menuBar">
 			<h1>menuBar</h1>
 		</div>
 
-		<div class="item5">
+		<div class="footer">
 			<h1>Footer</h1>
 		</div>
 
